3.0.1
Nov 11, 2022

FIX: cannot init component state (componentName=CsvFileAttributes) #359
FIX: cannot invoke "java.util.List.add(Object)" because "this.myUncommittedActions" is null #361
FIX: image in plugin description
FIX: plugin update restart

3.0.0
Nov 09, 2022

MAJOR UPDATE VERSION 3

General
-------

- renamed plugin to 'CSV Editor'
- fixed all compatibility issues with respect to IntelliJ platform 2022.*
- rework language lexer
- simplification of formatter & remove 'Tabularize' formatting
- remove slow & (useless) structure view
- adjusted setting dialogs
- integrated GitHub issue reporter in case plugin raises an exception
- removed TSV & PSV language, only CSV language but different filetypes

Table Editor
------------

- use PSI Tree as data source
- integrate with native IntelliJ IDE document change handler (e.g. for undo/redo)
- simplify UI/UX & remove header toolbar
- support showing and editing comment lines
- auto adjust row width
- manually adjust row height via dragging
- always use first line for header/column text


/* VERSION 2 */

2.21.0
Oct 26, 2022

PERF: support comments in fast lexer
PERF: reworked (rainbow) coloring
PERF: avoid formatting while typing
PERF: limit column highlighting to 1000 entries around caret
PERF: limit calculation and buffering of CSV column info data
FIX: short comments

2.20.0
Oct 24, 2022

FIX: Cannot load from object array because "data" is null #335 #337
NEW: Support fast lexing for default comments
NEW: Simplify & unify both lexers
FIX: Empty comment indicator

2.19.0
Jul 24, 2022

NEW: Ability to auto-reload changed files #316
FIX: NullPointerException when applying editor state #327
FIX: additional disposed checks

2.18.2
Dec 14, 2021

FIX: java.lang.NullPointerException #320
FIX: Exception when Show info balloon is not selected #318

2.18.1
Nov 04, 2021

FIX: set require-restart attribute
NEW: Ability to open urls from IntelliJ CSV view #312

2.18.0
Oct 21, 2021
