@@ -110,7 +110,9 @@ PS: The previous versions are still available on the project page.
 Update 3.0.1
 
 FIX: cannot init component state (componentName=CsvFileAttributes) #359
-FIX: cannot invoke "java.util.List.add(Object)" because "this.myUncommittedActions" is null #361
+FIX: cannot invoke "add(Object)" because "this.myUncommittedActions" is null #361
+FIX: cannot invoke "createNotification(...)" because "notificationGroup" is null #362
+FIX: cannot invoke "getManager()" because the return value of "getPsiFile()" is null #363
 FIX: image in plugin description
 FIX: plugin update restart
 
